; ModuleID = '/home/carl/AnghaBench/mpv/input/extr_input.c_should_drop_cmd.c'
source_filename = "/home/carl/AnghaBench/mpv/input/extr_input.c_should_drop_cmd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.input_ctx = type { %struct.TYPE_2__*, %struct.cmd_queue }
%struct.TYPE_2__ = type { i64 }
%struct.cmd_queue = type { i32 }
%struct.mp_cmd = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.input_ctx*, %struct.mp_cmd*)* @should_drop_cmd to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @should_drop_cmd(%struct.input_ctx* %0, %struct.mp_cmd* %1) #0 {
  %3 = alloca %struct.input_ctx*, align 8
  %4 = alloca %struct.mp_cmd*, align 8
  %5 = alloca %struct.cmd_queue*, align 8
  store %struct.input_ctx* %0, %struct.input_ctx** %3, align 8
  store %struct.mp_cmd* %1, %struct.mp_cmd** %4, align 8
  %6 = load %struct.input_ctx*, %struct.input_ctx** %3, align 8
  %7 = getelementptr inbounds %struct.input_ctx, %struct.input_ctx* %6, i32 0, i32 1
  store %struct.cmd_queue* %7, %struct.cmd_queue** %5, align 8
  %8 = load %struct.cmd_queue*, %struct.cmd_queue** %5, align 8
  %9 = call i64 @queue_count_cmds(%struct.cmd_queue* %8)
  %10 = load %struct.input_ctx*, %struct.input_ctx** %3, align 8
  %11 = getelementptr inbounds %struct.input_ctx, %struct.input_ctx* %10, i32 0, i32 0
  %12 = load %struct.TYPE_2__*, %struct.TYPE_2__** %11, align 8
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = icmp sge i64 %9, %14
  %16 = zext i1 %15 to i32
  ret i32 %16
}

declare dso_local i64 @queue_count_cmds(%struct.cmd_queue*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
